<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="mediateka">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="darktheme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="help">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="practicumURL">https://practicum.yandex.ru/android-developer/</string>
    <string name="agreementURL">https://yandex.ru/legal/practicum_offer/</string>
    <string name="mail">don.dek@yandex.ru</string>
    <string name="headMessage">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="bodyMessage">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="NothingFound">Ничего не нашлось</string>
    <string name="NoConnection">Проблемы со связью</string>
    <string name="LoadFailed">Загрузка не удалась. Проверьте\nподключение к интернету</string>
    <string name="Update">Обновить</string>
    <string name="YouSearch">Вы искали</string>
    <string name="ClearHistory">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="favoriteTracks">Избранные треки</string>
    <string name="Playlists">Плейлисты</string>
    <string name="NewPlaylist">Новый плейлист</string>
    <string name="emptyMediateka">Ваша медиатека пуста</string>
    <string name="emptyPlaylist">Вы не создали\nни одного плейлиста</string>
    <string name="name">Название*</string>
    <string name="description">Описание</string>
    <string name="Create">Создать</string>
    <string name="playlist_created">Плейлист %s создан</string>
    <string name="playlist_edited">Плейлист %s изменен</string>
    <string name="end_create">Завершить создание плейлиста?</string>
    <string name="lost_data">Все несохраненные данные будут потеряны</string>
    <string name="end">Завершить</string>
    <string name="cancel">Отмена</string>
    <string name="addPlaylist">Добавить в плейлист</string>
    <string name="already_added">Трек уже добавлен в плейлист %s</string>
    <string name="successful_added">Добавлено в плейлист %s</string>
    <string name="delete_track_title">Удалить трек</string>
    <string name="delete_track_message">Хотите удалить трек «%s» из плейлиста?</string>
    <string name="delete_track_no">Нет</string>
    <string name="delete_track_yes">Да</string>
    <string name="Share">Поделиться</string>
    <string name="edit">Редактировать информацию</string>
    <string name="empty_playlist_message">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="empty_tracks">Вы не добавили ни\nодного трека</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="delete_playlist_title">Удалить плейлист</string>
    <string name="delete_playlist_message">Хотите удалить плейлист?</string>
    <string name="delete_playlist_yes">Удалить</string>
    <string name="delete_playlist_no">Отмена</string>
    <string name="save">Сохранить</string>
    <string name="edit2">Редактировать</string>
</resources>



