<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/MainLayout"
    android:fitsSystemWindows="true">

    <TextView
        style="@style/PrimaryText"
        android:text="@string/app_name"
        android:paddingLeft="12dp"
        android:paddingTop="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/pad16"
        android:paddingBottom="12dp">

        <Button
            android:id="@+id/search"
            style="@style/MainButtonStyle"
            android:text="@string/search"
            app:icon="@drawable/vector2" />


        <Button
            android:id="@+id/mediateka"
            style="@style/MainButtonStyle"
            android:text="@string/mediateka"
            app:icon="@drawable/vector" />

        <Button
            android:id="@+id/settings"
            style="@style/MainButtonStyle"
            android:text="@string/settings"
            app:icon="@drawable/vector3" />

    </LinearLayout>
</LinearLayout>


