<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/DefaultLayout"
    android:fitsSystemWindows="true"
    tools:context=".ui.settings.fragment.SettingsFragment"
>

    <LinearLayout
        style="@style/DefaultLayout"
        android:paddingHorizontal="@dimen/pad16">

    <LinearLayout
        style="@style/LinearLayoutSettings">


        <TextView
            style="@style/PrimaryTextBlack"
            android:text="@string/settings"
            android:layout_marginTop="14dp"
            />
    </LinearLayout>

    <LinearLayout
        style="@style/LinearLayoutSettings"
        android:layout_marginTop="50dp"
        >

        <TextView
            style="@style/SecondarySettingsText"
            android:text="@string/darktheme"
            />
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/themeSwitcher"
            style="@style/ThemeSwitcher"
            />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ShareButton"
        style="@style/LinearLayoutSettings"
        android:layout_marginTop="30dp"
        >

        <TextView
            style="@style/SecondarySettingsText"
            android:text="@string/share"
            />

        <ImageView
            style="@style/SettingsIcons"
            android:layout_width="16dp"
            android:layout_height="18dp"
            android:src="@drawable/vector4" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/SupportButton"
        style="@style/LinearLayoutSettings"
        android:layout_marginTop="42dp"
        >

        <TextView
            style="@style/SecondarySettingsText"
            android:text="@string/help"
            />

        <ImageView
            style="@style/SettingsIcons"
            android:layout_width="20dp"
            android:layout_height="18dp"
            android:src="@drawable/vector5" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/AgreementButton"
        style="@style/LinearLayoutSettings"
        android:layout_marginTop="42dp"
        >

        <TextView
            style="@style/SecondarySettingsText"
            android:text="@string/agreement"
            />

        <ImageView
            style="@style/SettingsIcons"
            android:layout_width="8dp"
            android:layout_height="14dp"
            android:src="@drawable/vector6" />


    </LinearLayout>

    </LinearLayout>

</LinearLayout>