<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingLeft="@dimen/pad16"
    android:paddingRight="15dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/buttonback"
            android:layout_width="@dimen/size20"
            android:layout_height="@dimen/size20"
            android:src="@drawable/vector7"
            app:tint="@color/black"
            android:layout_marginTop="19dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="@dimen/primary_text_size"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="14dp"
            android:layout_marginLeft="28dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/darktheme"
            android:textSize="@dimen/lower_text_size"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:layout_gravity="center"
            />
        <Switch
            android:layout_width="56dp"
            android:layout_height="48dp"
            android:layout_gravity="end"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:textSize="@dimen/lower_text_size"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:layout_gravity="center"
            />

        <ImageView
            android:layout_width="@dimen/size20"
            android:layout_height="@dimen/size20"
            android:src="@drawable/vector4"
            android:layout_marginRight="@dimen/pad6"/>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_marginTop="42dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help"
            android:textSize="@dimen/lower_text_size"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:layout_gravity="center"
            />

        <ImageView
            android:layout_width="@dimen/size20"
            android:layout_height="@dimen/size20"
            android:src="@drawable/vector5"
            android:layout_marginRight="@dimen/pad6"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_marginTop="42dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agreement"
            android:textSize="@dimen/lower_text_size"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:layout_gravity="center"
            />

        <ImageView
            android:layout_width="@dimen/size20"
            android:layout_height="@dimen/size20"
            android:src="@drawable/vector6"
            android:layout_marginRight="@dimen/pad6"/>


    </LinearLayout>

</LinearLayout>