<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    style="@style/ChangeColor"
    android:layout_height="match_parent"
    android:paddingBottom="32dp"
    tools:context=".ui.make_playlist.fragments.MakePlaylistFragment">

    <ImageButton
        android:id="@+id/MakePlaylistBackButton"
        style="@style/ButtonBack"

        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/createPlaylistText"
        android:text="@string/NewPlaylist"
        style="@style/MakePlaylistTitleText"
        android:layout_marginStart="28dp"
        app:layout_constraintStart_toEndOf="@id/MakePlaylistBackButton"
        app:layout_constraintTop_toTopOf="@id/MakePlaylistBackButton"
        app:layout_constraintBottom_toBottomOf="@id/MakePlaylistBackButton" />

    <ImageButton
        android:id="@+id/choosePictureImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:layout_marginTop="42dp"
        android:layout_marginStart="24dp"
        android:padding="130dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintDimensionRatio="1:1"
        android:background="@drawable/choose_pictures"
        android:src="@drawable/add_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_max="500dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/MakePlaylistBackButton" />

    <EditText
        android:id="@+id/playlistNameEditText"
        android:layout_width="0dp"
        android:layout_height="56dp"
        style="@style/MakePlaylistEdittextText"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/name"
        android:padding="12dp"
        android:background="@drawable/edittext_makeplaylist"
        android:inputType="text"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/choosePictureImage" />

    <EditText
        android:id="@+id/playlistDescriptionEditText"
        android:layout_width="0dp"
        android:layout_height="56dp"
        style="@style/MakePlaylistEdittextText"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/description"
        android:padding="12dp"
        android:background="@drawable/edittext_makeplaylist"
        android:inputType="textMultiLine"
        android:maxLines="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playlistNameEditText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/createPlaylistButton"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="17dp"
        style="@style/MakePlaylistButtonText"
        android:layout_marginEnd="17dp"
        android:text="@string/Create"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:background="@drawable/makeplaylist_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>


