<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/DefaultLayout"
    >

    <LinearLayout
        style="@style/DefaultLayout"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="@dimen/pad16">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/SearchBackButton"
                style="@style/ButtonBack"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="3dp"/>
 />
        <TextView
            style="@style/PrimaryTextBlack"
            android:text="@string/search"
            android:layout_marginBottom="@dimen/pad16"
            />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="36dp">
        <EditText
            android:id="@+id/SearchEditText"
            style="@style/SearchEditText"
            />

            <ImageView
                android:id="@+id/clearButton"
                style="@style/ClearTextButton" />
        </FrameLayout>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        style="@style/DefaultLayout"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
>

        <LinearLayout
            style="@style/BottomNavigation">

            <ImageView
                style="@style/BottomNavigationIcon"
                android:src="@drawable/vector2"
                app:tint="@color/YpBlue" />

            <TextView
                style="@style/BottomNavigationText"
                android:text="@string/search"
                android:textColor="@color/YpBlue"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/MediatekaSearchBottomNavigation"
            style="@style/BottomNavigation">

            <ImageView
                style="@style/BottomNavigationIcon"
                android:src="@drawable/vector"/>

            <TextView
                style="@style/BottomNavigationText"
                android:text="@string/mediateka"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/SettingsSearchBottomNavigation"
            style="@style/BottomNavigation">

            <ImageView
                style="@style/BottomNavigationIcon"
                android:src="@drawable/vector3"/>

            <TextView
                style="@style/BottomNavigationText"
                android:text="@string/settings"/>

        </LinearLayout>

    </LinearLayout>

    </LinearLayout>